<resources>
    <string name="app_name">BKV Tickets</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="password_again">Password again</string>
    <string name="cancel">Cancel</string>
    <string name="login_guest">Continue as guest</string>
    <string name="details">Details</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="search">Search</string>
    <string name="reservations">Reservations</string>
    <string name="profile">Profile</string>
    <string name="logout">Log out</string>
    <string name="travel_date">Date of traveling</string>
    <string name="full_name">Full name</string>
    <string name="error_passwords_dont_match">Passwords don\'t match</string>
    <string name="error_field_empty">All fields must be filled</string>
    <string name="error_invalid_email">E-mail address is invalid</string>
    <string name="error_weak_password">Password must be at least 8 characters long and contain at least one lower- and uppercase letter and at least one number</string>
    <string name="error_email_used">User exists with the given e-mail address</string>
    <string name="error_unexpected">Something unexpected happened, try again later</string>
    <string name="error_invalid_credentials">Invalid e-mail or password</string>
    <string name="save">Save</string>
    <string name="success_update_user">User updated successfully</string>
    <string name="train">Train:</string>
    <string name="stops">Stops</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="bkv_full" translatable="false">Biztosan Késő Vasút Zrt.</string>
    <string name="change">Change</string>
    <string name="error_stations_equal">The selected stations are the same</string>
    <string name="success_save_reservation">Reservation saved successfully</string>
    <string name="success_delete_reservation">Reservation deleted</string>
</resources>